change some image

--- a/about.html
+++ b/about.html
@@ -316,10 +316,7 @@
     <div class="copyright-area">
         <div class="container">
             <p>
-                Copyright © 20 LogXlabs. All Rights Reserved by
-                <a href="http://www.logxlabs.com/" target="_blank">
-                    Ayaantech Limited
-                </a>
+                Copyright ©2023 LogXlabs all rights reserved
             </p>
         </div>
     </div>
