--- a/technology-details.html
+++ b/technology-details.html
@@ -156,7 +156,7 @@
 
 
                     <div class="projects-details-image">
-                        <img src="assets/img/projects-details.jpg" alt="image">
+                        <img src="assets/img/technology/2.png" alt="image" class="w-100">
                     </div>
 
                     <div class="projects-details-desc">
@@ -348,10 +348,7 @@
     <div class="copyright-area">
         <div class="container">
             <p>
-                Copyright © 2023 LogXlabs. All Rights Reserved by
-                <a href="http://www.logxlabs.com/" target="_blank">
-                    Ayaantech Limited
-                </a>
+                Copyright ©2023 LogXlabs all rights reserved
             </p>
         </div>
     </div>
