some modify like remove duty hour from header, buttom remove from home banner,

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <!-- Required meta tags -->
@@ -48,18 +48,15 @@
                                     data-cfemail="3d55585151527d54535b52135e5250">contact@logxlabs.com</span></a>
                         </li>
 
-                        <li>
-                            <i class="las la-phone-volume"></i>
-                            <a href="tel:33 0616 078 690">33 (0)616 078 690</a>
-                        </li>
+
                     </ul>
                 </div>
 
                 <div class="col-lg-6">
                     <ul class="top-right">
                         <li>
-                            <i class="las la-clock"></i>
-                            Opening Hour: 9:00 am - 9:00 pm
+                            <i class="las la-phone-volume"></i>
+                            <a href="tel:33 0616 078 690">33 (0)616 078 690</a>
                         </li>
                     </ul>
                 </div>
@@ -140,10 +137,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod incididunt labore
                             dolore magna aliqua quis ipsum suspendisse</p>
                         <div class="banner-btn">
-                            <a href="#" class="default-btn">
-                                Book Appointment
-                                <span></span>
-                            </a>
+
                         </div>
                     </div>
                 </div>
