--- a/technology-details.html
+++ b/technology-details.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <!-- Required meta tags -->
@@ -47,19 +47,14 @@
                             <a href="mailto:contact@logxlabs.com"><span class="__cf_email__"
                                     data-cfemail="3d55585151527d54535b52135e5250">contact@logxlabs.com</span></a>
                         </li>
-
-                        <li>
-                            <i class="las la-phone-volume"></i>
-                            <a href="tel:33 0616 078 690">33 (0)616 078 690</a>
-                        </li>
                     </ul>
                 </div>
 
                 <div class="col-lg-6">
                     <ul class="top-right">
                         <li>
-                            <i class="las la-clock"></i>
-                            Opening Hour: 9:00 am - 9:00 pm
+                            <i class="las la-phone-volume"></i>
+                            <a href="tel:33 0616 078 690">33 (0)616 078 690</a>
                         </li>
                     </ul>
                 </div>
@@ -107,12 +102,12 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="technology.html" class="nav-link">
+                                <a href="technology.html" class="nav-link active">
                                     Technology
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="news.html" class="nav-link active">
+                                <a href="news.html" class="nav-link">
                                     News
                                 </a>
                             </li>
