translate content english to france

--- a/contact.html
+++ b/contact.html
@@ -108,11 +108,7 @@
                                     Technology
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a href="news.html" class="nav-link">
-                                    News
-                                </a>
-                            </li>
+
                             <li class="nav-item">
                                 <a href="contact.html" class="nav-link active">
                                     Contact
@@ -327,9 +323,9 @@
                                 <img src="assets/img/logo.png" alt="image">
                             </a>
                         </div>
-                        <p>A link between academic research and industry according to a viable economic model Project
-                            teams made of an interactive trio : Researchers, Engineers, Commercial agents. <a
-                                href="abuot.html" class="text-info">Read More</a></p>
+                        <p>Une passerelle entre la Recherche académique et l'Industrie selon un modèle économique
+                            viable. Des équipes projets <a href="abuot.html" class="text-info">Read
+                                More</a></p>
                         <ul class="social">
                             <li>
                                 <a href="#" class="facebook" target="_blank">
@@ -393,10 +389,7 @@
                                 <i class="las la-angle-double-right"></i>
                                 <a href="technology.html">Technology</a>
                             </li>
-                            <li>
-                                <i class="las la-angle-double-right"></i>
-                                <a href="news.html">News</a>
-                            </li>
+
 
                             <li>
                                 <i class="las la-angle-double-right"></i>
