--- a/index.html
+++ b/index.html
@@ -108,11 +108,7 @@
                                     Technology
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a href="news.html" class="nav-link">
-                                    News
-                                </a>
-                            </li>
+
                             <li class="nav-item">
                                 <a href="contact.html" class="nav-link">
                                     Contact
@@ -134,8 +130,9 @@
                 <div class="container">
                     <div class="main-banner-content">
                         <h1>Serving Science & Technology</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod incididunt labore
-                            dolore magna aliqua quis ipsum suspendisse</p>
+                        <p>« Serving Science & Technology » présente un engagement dédié à fournir un soutien, des
+                            solutions et une expertise complets pour faire progresser les domaines de la science et de
+                            la technologie.</p>
                         <div class="banner-btn">
 
                         </div>
@@ -164,27 +161,27 @@
                 <div class="col-lg-7">
                     <div class="about-content">
                         <span>About Us</span>
-                        <h3> is LogXlabs ?</h3>
+                        <h3>Qu'est ce que LogXlabs?</h3>
 
-                        <h4> In a nutshell</h4>
+                        <h4>Profil</h4>
 
-                        <p>A link between academic research and industry according to a viable economic model
-                            Project teams made of an interactive trio : Researchers, Engineers, Commercial agents.
-                            A focus on simulation and optimisation of multi-objective processes under constraints.</p>
+                        <p>Une passerelle entre la Recherche académique et l'Industrie selon un modèle économique
+                            viable.
+                            Des équipes projets composées d'un trio interactif : Chercheurs - Ingénieurs - Commerciaux.
+                            Une spécialisation dans la simulation et l'optimisation de processus multi-objectifs sous
+                            contraintes.</p>
 
                         <h4> Services</h4>
 
-                        <p></p> LogXlabs funds research in collaboration with universities to find solutions for real
-                        pilot
-                        projects raised by customers. </p>
-                        <p> The outcomes of the pilot vouches for our success because the customer judges the impact of
-                            our
-                            solutions on its own business. </p>
+                        <p>LogXlabs engage, sur ses fonds propres, des recherches en collaboration avec les universités
+                            sur des projets pilotes réels des clients.</p>
+                        <p>Le résultat du pilote est le seul garant de notre succès car le client juge, sur son propre
+                            business, l'impact de nos solutions.</p>
 
                         <h4> Solutions</h4>
 
-                        <p> LogXlabs performs industrialisation and commercialisation in order to deliver a robust and
-                            complete product, meeting the customer requirements </p>
+                        <p>LogXlabs prend en charge l'industrialisation et la commercialisation pour fournir un produit
+                            fini, fiable et complet, répondant au besoin exprimé du client.</p>
 
                     </div>
                 </div>
@@ -204,44 +201,47 @@
                 <div class="col-lg-6">
                     <div class="why-choose-content">
                         <span>Why Choose Us</span>
-                        <h3>Over 20 Years of Experience With Best Results</h3>
-                        <strong>Your full-service lab for clinical trials. Our mission is to ensure the generation of
-                            accurate and precise findings</strong>
+                        <h3>Plus de 20 ans d'expérience avec les meilleurs résultats</h3>
+                        <strong>Votre laboratoire à service complet pour les essais cliniques. Notre mission est
+                            d'assurer la génération de
+                            des constatations justes et précises</strong>
 
                         <div class="why-choose-text">
                             <div class="icon">
                                 <i class="las la-check"></i>
                             </div>
-                            <h4>Free Home Sampling</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                dolore. magna aliqua.</p>
+                            <h4>Échantillonnage gratuit à domicile</h4>
+                            <p>"Free Home Sampling" offre la commodité de recevoir des échantillons de produits
+                                directement à la maison sans aucun frais, permettant aux clients de découvrir les
+                                produits avant de prendre une décision d'achat.</p>
                         </div>
 
                         <div class="why-choose-text">
                             <div class="icon">
                                 <i class="las la-check"></i>
                             </div>
-                            <h4>High- End Technology</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                dolore. magna aliqua.</p>
+                            <h4>Technologie haut de gamme</h4>
+                            <p>Technologie haut de gamme" évoque des technologies de pointe et de qualité supérieure.
+                                Cela met en avant des solutions et des produits de pointe qui offrent des performances
+                                exceptionnelles, une fiabilité accrue et une expérience utilisateur de premier ordre.
+                            </p>
                         </div>
 
                         <div class="why-choose-text">
                             <div class="icon">
                                 <i class="las la-check"></i>
                             </div>
-                            <h4>Patient Support</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                dolore. magna aliqua.</p>
+                            <h4>Soutien aux patients</h4>
+                            <p>"Patient Support" provides comprehensive assistance and care to individuals, ensuring
+                                their needs are met throughout their medical journey with compassion and expertise.</p>
                         </div>
 
                         <div class="why-choose-text">
                             <div class="icon">
                                 <i class="las la-check"></i>
                             </div>
-                            <h4>500 + Different Tests</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                dolore. magna aliqua.</p>
+                            <h4>500 + tests différents</h4>
+                            <p>"500+ Varied Tests for Comprehensive Analysis and Evaluation."</p>
                         </div>
                     </div>
                 </div>
@@ -267,147 +267,54 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="projects-item two">
                         <div class="image">
-                            <a href="technology-details.html">
+                            <a href="technology-details-1.html">
                                 <img src="assets/img/technology/1.png" alt="image">
                             </a>
 
                             <div class="icon">
-                                <a href="technology-details.html">
+                                <a href="technology-details-1.html">
                                     <i class="las la-arrow-right"></i>
                                 </a>
                             </div>
                         </div>
                         <div class="content">
                             <h3>
-                                <a href="technology-details.html">The algorithms</a>
+                                <a href="technology-details-1.html">Les algorithmes</a>
                             </h3>
-                            <span>Optimisation can be defined as the processes used to find the best solutions to a
-                                problem that has a lot of possible solutions.</span>
+                            <span>L'optimisation peut être considérée comme la recherche de la meilleure solution à un
+                                problème ayant un grand nombre de solutions. Pour faire face à l'explosion combinatoire
+                                de ces solutions, </span>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="projects-item two">
                         <div class="image">
-                            <a href="technology-details.html">
+                            <a href="technology-details-2.html">
                                 <img src="assets/img/technology/2.png" alt="image">
                             </a>
 
                             <div class="icon">
-                                <a href="technology-details.html">
+                                <a href="technology-details-2.html">
                                     <i class="las la-arrow-right"></i>
                                 </a>
                             </div>
                         </div>
                         <div class="content">
                             <h3>
-                                <a href="technology-details.html">Computers</a>
+                                <a href="technology-details-2.html">Les machines</a>
                             </h3>
-                            <span>Although our algorithms control the combinatorial explosion of solutions, it is
-                                necessary to use the power of server clusters to produce results as</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="projects-item two">
-                        <div class="image">
-                            <a href="technology-details.html">
-                                <img src="assets/img/technology/1.png" alt="image">
-                            </a>
-
-                            <div class="icon">
-                                <a href="technology-details.html">
-                                    <i class="las la-arrow-right"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <h3>
-                                <a href="technology-details.html">The algorithms</a>
-                            </h3>
-                            <span>Optimisation can be defined as the processes used to find the best solutions to a
-                                problem that has a lot of possible solutions.</span>
+                            <span>Bien que nos algorithmes permettent de juguler l'explosion combinatoire des solutions,
+                                il est nécessaire de faire appel à la puissance des fermes de serveurs pour obtenir des
+                                résultats </span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
     <!-- Start Blog Area -->
 
-    <section class="blog-area pt-100 pb-70">
-        <div class="container">
-            <div class="section-title">
-                <span>News</span>
-                <h2>Our Latest News</h2>
-            </div>
-
-            <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog-item bg-ffffff">
-                        <div class="image">
-                            <a href="news-details.html">
-                                <img src="assets/img/blog/blog1.jpg" alt="image">
-                            </a>
-                            <div class="date">
-                                <span>29 December 208</span>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <h3>
-                                <a href="news-details.html">
-                                    LOGXLABS assesses your ecological footprint
-                                </a>
-                            </h3>
-                            <a href="news-details.html" class="blog-btn">Read More +</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog-item bg-ffffff">
-                        <div class="image">
-                            <a href="news-details.html">
-                                <img src="assets/img/blog/blog1.jpg" alt="image">
-                            </a>
-                            <div class="date">
-                                <span>29 December 208</span>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <h3>
-                                <a href="news-details.html">
-                                    LOGXLABS assesses your ecological footprint
-                                </a>
-                            </h3>
-                            <a href="news-details.html" class="blog-btn">Read More +</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog-item bg-ffffff">
-                        <div class="image">
-                            <a href="news-details.html">
-                                <img src="assets/img/blog/blog1.jpg" alt="image">
-                            </a>
-                            <div class="date">
-                                <span>29 December 208</span>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <h3>
-                                <a href="news-details.html">
-                                    LOGXLABS assesses your ecological footprint
-                                </a>
-                            </h3>
-                            <a href="news-details.html" class="blog-btn">Read More +</a>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
 
     <!-- Start Newsletter Area -->
     <div class="newsletter-area pb-100">
@@ -416,7 +323,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="newsletter-content">
-                            <h2>Subscribe To Our Newsletter</h2>
+                            <h2>Abonnez-vous à notre newsletter</h2>
                         </div>
                     </div>
 
@@ -449,9 +356,9 @@
                                 <img src="assets/img/logo.png" alt="image">
                             </a>
                         </div>
-                        <p>A link between academic research and industry according to a viable economic model Project
-                            teams made of an interactive trio : Researchers, Engineers, Commercial agents. <a
-                                href="abuot.html" class="text-info">Read More</a></p>
+                        <p>Une passerelle entre la Recherche académique et l'Industrie selon un modèle économique
+                            viable. Des équipes projets <a href="abuot.html" class="text-info">Read
+                                More</a></p>
                         <ul class="social">
                             <li>
                                 <a href="#" class="facebook" target="_blank">
@@ -515,10 +422,7 @@
                                 <i class="las la-angle-double-right"></i>
                                 <a href="technology.html">Technology</a>
                             </li>
-                            <li>
-                                <i class="las la-angle-double-right"></i>
-                                <a href="news.html">News</a>
-                            </li>
+
 
                             <li>
                                 <i class="las la-angle-double-right"></i>
@@ -604,6 +508,7 @@
     <script src="assets/js/wow.min.js"></script>
     <!-- Custom JS -->
     <script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
