--- a/technology-details-1.html
+++ b/technology-details-1.html
@@ -102,15 +102,11 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="technology.html" class="nav-link">
+                                <a href="technology.html" class="nav-link active">
                                     Technology
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a href="news.html" class="nav-link news active">
-                                    News
-                                </a>
-                            </li>
+
                             <li class="nav-item">
                                 <a href="contact.html" class="nav-link">
                                     Contact
@@ -126,15 +122,15 @@
 
 
     <!-- Start Page Title Area -->
-    <div class="page-title-area item-bg-3">
+    <div class="page-title-area item-bg-6">
         <div class="d-table">
             <div class="d-table-cell">
                 <div class="container">
                     <div class="page-title-content">
-                        <h2>News</h2>
+                        <h2>Technology Details</h2>
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li>News</li>
+                            <li>Technology Details</li>
                         </ul>
                     </div>
                 </div>
@@ -143,40 +139,84 @@
     </div>
     <!-- End Page Title Area -->
 
-    <!-- Start Blog Area -->
-    <section class="blog-area pt-100 pb-100">
+    <!-- Start Projects Details Area -->
+    <section class="projects-details-area ptb-100">
         <div class="container">
-            <div class="section-title">
-                <span>News</span>
-                <h2>Our Latest News</h2>
-            </div>
-
             <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog-item bg-ffffff">
-                        <div class="image">
-                            <a href="news-details.html">
-                                <img src="assets/img/blog/blog1.jpg" alt="image">
-                            </a>
-                            <div class="date">
-                                <span>29 December 208</span>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <h3>
-                                <a href="news-details.html">
-                                    LOGXLABS assesses your ecological footprint
-                                </a>
-                            </h3>
-                            <a href="news-details.html" class="blog-btn">Read More +</a>
-                        </div>
+                <div class="col-lg-8 col-md-12">
+
+
+                    <div class="projects-details-image">
+                        <img src="assets/img/technology/1.png" alt="image" class="w-100">
+                    </div>
+
+                    <div class="projects-details-desc">
+                        <h3>Les algorithmes</h3>
+                        <p>L'optimisation peut être considérée comme la recherche de la meilleure solution à un problème
+                            ayant un grand nombre de solutions. Pour faire face à l'explosion combinatoire de ces
+                            solutions, les algorithmes évolutionnaires sont des techniques capables d'évaluer des
+                            centaines de milliers de solutions possibles et de les faire converger vers les meilleures
+                            alternatives.</p>
+                        <p>Parmi ces algorithmes évolutionnaires, citons les algorithmes génétiques, les colonies de
+                            fourmis et les essaims particulaires.</p>
+                        <p>La force de nos algorithmes réside dans l'hybridation de ces objets mathématiques puissants
+                            avec des algorithmes classiques pour tirer le meilleur de chacun dans une configuration
+                            donnée.</p>
+
                     </div>
                 </div>
 
+                <div class="col-lg-4 col-md-12">
+                    <aside class="widget-area" id="secondary">
+
+                        <section class="widget widget_categories">
+                            <h3 class="widget-title">Technology</h3>
+                            <ul>
+                                <li>
+                                    <a href="technology-details-1.html">Les algorithmes</a>
+                                </li>
+                                <li>
+                                    <a href="technology-details-2.html">Les machines</a>
+                                </li>
+
+                            </ul>
+                        </section>
+                    </aside>
+                </div>
             </div>
         </div>
     </section>
-    <!-- End Blog Area -->
+    <!-- End Projects Details Area -->
+
+    <!-- Start Newsletter Area -->
+    <div class="newsletter-area pb-100">
+        <div class="container">
+            <div class="newsletter-inner">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <div class="newsletter-content">
+                            <h2>Subscribe To Our Newsletter</h2>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <form class="newsletter-form">
+                            <input type="email" class="input-newsletter" placeholder="Your Email" name="EMAIL" required
+                                autocomplete="off">
+
+                            <button type="submit">
+                                Subscribe Now
+                            </button>
+
+                            <div id="validator-newsletter" class="form-result"></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Newsletter Area -->
+
     <!-- Start Footer Area -->
     <div class="footer-area pt-100 pb-70">
         <div class="container">
@@ -188,9 +228,9 @@
                                 <img src="assets/img/logo.png" alt="image">
                             </a>
                         </div>
-                        <p>A link between academic research and industry according to a viable economic model Project
-                            teams made of an interactive trio : Researchers, Engineers, Commercial agents. <a
-                                href="abuot.html" class="text-info">Read More</a></p>
+                        <p>Une passerelle entre la Recherche académique et l'Industrie selon un modèle économique
+                            viable. Des équipes projets <a href="abuot.html" class="text-info">Read
+                                More</a></p>
                         <ul class="social">
                             <li>
                                 <a href="#" class="facebook" target="_blank">
@@ -254,10 +294,7 @@
                                 <i class="las la-angle-double-right"></i>
                                 <a href="technology.html">Technology</a>
                             </li>
-                            <li>
-                                <i class="las la-angle-double-right"></i>
-                                <a href="news.html">News</a>
-                            </li>
+
 
                             <li>
                                 <i class="las la-angle-double-right"></i>
