translate add, news letter section remove, new technology add and old img remove

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 
 
 <head>
@@ -48,15 +48,19 @@
                             <a href="mailto:contact@logxlabs.com"><span class="__cf_email__"
                                     data-cfemail="3d55585151527d54535b52135e5250">contact@logxlabs.com</span></a>
                         </li>
+                        <li>
+                            <i class="las la-phone-volume"></i>
+                            <a href="tel:33 0616 078 690">33 (0)616 078 690</a>
+                        </li>
                     </ul>
                 </div>
 
                 <div class="col-lg-6">
                     <ul class="top-right">
                         <li>
-                            <i class="las la-phone-volume"></i>
-                            <a href="tel:33 0616 078 690">33 (0)616 078 690</a>
+                            <div id="google_translate_element"></div>
                         </li>
+
                     </ul>
                 </div>
             </div>
@@ -105,11 +109,6 @@
                             <li class="nav-item">
                                 <a href="technology.html" class="nav-link">
                                     Technology
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="news.html" class="nav-link">
-                                    News
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -265,10 +264,7 @@
                                 <i class="las la-angle-double-right"></i>
                                 <a href="technology.html">Technology</a>
                             </li>
-                            <li>
-                                <i class="las la-angle-double-right"></i>
-                                <a href="news.html">News</a>
-                            </li>
+
 
                             <li>
                                 <i class="las la-angle-double-right"></i>
@@ -322,7 +318,23 @@
         <i class="las la-long-arrow-alt-up"></i>
     </div>
     <!-- End Go Top Area -->
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'en',
+                includedLanguages: 'en,fr',
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                autoDisplay: false,
+                gaTrack: true,
+                gaId: 'YOUR_GA_TRACKING_ID',
+                showIcon: true, // Show country icons
+                css: '.goog-custom-class' // Add a custom CSS class
+            }, 'google_translate_element');
+        }
+    </script>
 
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+    </script>
     <!-- Jquery Slim JS -->
     <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
