--- a/customer.html
+++ b/customer.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <!-- Required meta tags -->
@@ -29,7 +29,30 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css">
+    <style>
+        .goog-te-gadget-icon {
+            background: none !important;
+        }
 
+        .goog-te-banner-frame {
+            display: none;
+            background-color: #000;
+        }
+
+        div.goog-te-gadget-simple {
+            border-radius: 5px;
+            background-color: #000;
+            padding: 10px;
+        }
+
+        a.goog-te-menu-value {
+            text-decoration: none;
+        }
+
+        a.goog-te-menu-value>span {
+            color: #FFF;
+        }
+    </style>
     <title>LogXlabs - Research center</title>
 
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
@@ -47,14 +70,18 @@
                             <a href="mailto:contact@logxlabs.com"><span class="__cf_email__"
                                     data-cfemail="3d55585151527d54535b52135e5250">contact@logxlabs.com</span></a>
                         </li>
+                        <li>
+                            <i class="las la-phone-volume"></i>
+                            <a href="tel:33 0616 078 690">33 (0)616 078 690</a>
+                        </li>
                     </ul>
                 </div>
 
                 <div class="col-lg-6">
                     <ul class="top-right">
+
                         <li>
-                            <i class="las la-phone-volume"></i>
-                            <a href="tel:33 0616 078 690">33 (0)616 078 690</a>
+                            <div id="google_translate_element"></div>
                         </li>
                     </ul>
                 </div>
@@ -104,11 +131,6 @@
                             <li class="nav-item">
                                 <a href="technology.html" class="nav-link">
                                     Technology
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="news.html" class="nav-link">
-                                    News
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -203,34 +225,7 @@
     </section>
     <!-- End Feedback Area -->
 
-    <!-- Start Newsletter Area -->
-    <div class="newsletter-area pb-100">
-        <div class="container">
-            <div class="newsletter-inner">
-                <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <div class="newsletter-content">
-                            <h2>Subscribe To Our Newsletter</h2>
-                        </div>
-                    </div>
 
-                    <div class="col-lg-6">
-                        <form class="newsletter-form">
-                            <input type="email" class="input-newsletter" placeholder="Your Email" name="EMAIL" required
-                                autocomplete="off">
-
-                            <button type="submit">
-                                Subscribe Now
-                            </button>
-
-                            <div id="validator-newsletter" class="form-result"></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Newsletter Area -->
 
 
     <!-- Start Footer Area -->
@@ -310,10 +305,6 @@
                                 <i class="las la-angle-double-right"></i>
                                 <a href="technology.html">Technology</a>
                             </li>
-                            <li>
-                                <i class="las la-angle-double-right"></i>
-                                <a href="news.html">News</a>
-                            </li>
 
                             <li>
                                 <i class="las la-angle-double-right"></i>
@@ -367,6 +358,24 @@
         <i class="las la-long-arrow-alt-up"></i>
     </div>
     <!-- End Go Top Area -->
+
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'en',
+                includedLanguages: 'en,fr,es',
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                autoDisplay: false,
+                gaTrack: true,
+                gaId: 'YOUR_GA_TRACKING_ID',
+                showIcon: true, // Show country icons
+                css: '.goog-custom-class' // Add a custom CSS class
+            }, 'google_translate_element');
+        }
+    </script>
+
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+    </script>
 
     <!-- Jquery Slim JS -->
     <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
