--- a/technology-details-1.html
+++ b/technology-details-1.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <!-- Required meta tags -->
@@ -47,14 +47,18 @@
                             <a href="mailto:contact@logxlabs.com"><span class="__cf_email__"
                                     data-cfemail="3d55585151527d54535b52135e5250">contact@logxlabs.com</span></a>
                         </li>
+                        <li>
+                            <i class="las la-phone-volume"></i>
+                            <a href="tel:33 0616 078 690">33 (0)616 078 690</a>
+                        </li>
                     </ul>
                 </div>
 
                 <div class="col-lg-6">
                     <ul class="top-right">
+
                         <li>
-                            <i class="las la-phone-volume"></i>
-                            <a href="tel:33 0616 078 690">33 (0)616 078 690</a>
+                            <div id="google_translate_element"></div>
                         </li>
                     </ul>
                 </div>
@@ -107,11 +111,6 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="news.html" class="nav-link">
-                                    News
-                                </a>
-                            </li>
-                            <li class="nav-item">
                                 <a href="contact.html" class="nav-link">
                                     Contact
                                 </a>
@@ -151,7 +150,7 @@
 
 
                     <div class="projects-details-image">
-                        <img src="assets/img/technology/2.png" alt="image" class="w-100">
+                        <img src="assets/img/technology/1.png" alt="image" class="w-100">
                     </div>
 
                     <div class="projects-details-desc">
@@ -176,10 +175,13 @@
                             <h3 class="widget-title">Technology</h3>
                             <ul>
                                 <li>
-                                    <a href="#">The Algorithms</a>
+                                    <a href="technology-details-1.html">The Algorithms</a>
                                 </li>
                                 <li>
-                                    <a href="#">Computers</a>
+                                    <a href="technology-details-2.html">Computers</a>
+                                </li>
+                                <li>
+                                    <a href="technology-details-3.html">Ecological Technology</a>
                                 </li>
 
                             </ul>
@@ -191,34 +193,7 @@
     </section>
     <!-- End Projects Details Area -->
 
-    <!-- Start Newsletter Area -->
-    <div class="newsletter-area pb-100">
-        <div class="container">
-            <div class="newsletter-inner">
-                <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <div class="newsletter-content">
-                            <h2>Subscribe To Our Newsletter</h2>
-                        </div>
-                    </div>
 
-                    <div class="col-lg-6">
-                        <form class="newsletter-form">
-                            <input type="email" class="input-newsletter" placeholder="Your Email" name="EMAIL" required
-                                autocomplete="off">
-
-                            <button type="submit">
-                                Subscribe Now
-                            </button>
-
-                            <div id="validator-newsletter" class="form-result"></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Newsletter Area -->
 
     <!-- Start Footer Area -->
     <div class="footer-area pt-100 pb-70">
@@ -297,10 +272,6 @@
                                 <i class="las la-angle-double-right"></i>
                                 <a href="technology.html">Technology</a>
                             </li>
-                            <li>
-                                <i class="las la-angle-double-right"></i>
-                                <a href="news.html">News</a>
-                            </li>
 
                             <li>
                                 <i class="las la-angle-double-right"></i>
@@ -354,6 +325,24 @@
         <i class="las la-long-arrow-alt-up"></i>
     </div>
     <!-- End Go Top Area -->
+
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'en',
+                includedLanguages: 'en,fr,es',
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                autoDisplay: false,
+                gaTrack: true,
+                gaId: 'YOUR_GA_TRACKING_ID',
+                showIcon: true, // Show country icons
+                css: '.goog-custom-class' // Add a custom CSS class
+            }, 'google_translate_element');
+        }
+    </script>
+
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+    </script>
 
     <!-- Jquery Slim JS -->
     <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
