--- a/technology-details-3.html
+++ b/technology-details-3.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <!-- Required meta tags -->
@@ -47,14 +47,18 @@
                             <a href="mailto:contact@logxlabs.com"><span class="__cf_email__"
                                     data-cfemail="3d55585151527d54535b52135e5250">contact@logxlabs.com</span></a>
                         </li>
+                        <li>
+                            <i class="las la-phone-volume"></i>
+                            <a href="tel:33 0616 078 690">33 (0)616 078 690</a>
+                        </li>
                     </ul>
                 </div>
 
                 <div class="col-lg-6">
                     <ul class="top-right">
+
                         <li>
-                            <i class="las la-phone-volume"></i>
-                            <a href="tel:33 0616 078 690">33 (0)616 078 690</a>
+                            <div id="google_translate_element"></div>
                         </li>
                     </ul>
                 </div>
@@ -102,13 +106,8 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="technology.html" class="nav-link">
+                                <a href="technology.html" class="nav-link active">
                                     Technology
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="news.html" class="nav-link news active">
-                                    News
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -126,15 +125,15 @@
 
 
     <!-- Start Page Title Area -->
-    <div class="page-title-area item-bg-3">
+    <div class="page-title-area item-bg-6">
         <div class="d-table">
             <div class="d-table-cell">
                 <div class="container">
                     <div class="page-title-content">
-                        <h2>News</h2>
+                        <h2>Technology Details</h2>
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li>News</li>
+                            <li>Technology Details</li>
                         </ul>
                     </div>
                 </div>
@@ -143,40 +142,69 @@
     </div>
     <!-- End Page Title Area -->
 
-    <!-- Start Blog Area -->
-    <section class="blog-area pt-100 pb-100">
+    <!-- Start Projects Details Area -->
+    <section class="projects-details-area ptb-100">
         <div class="container">
-            <div class="section-title">
-                <span>News</span>
-                <h2>Our Latest News</h2>
-            </div>
-
             <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog-item bg-ffffff">
-                        <div class="image">
-                            <a href="news-details.html">
-                                <img src="assets/img/blog/blog1.jpg" alt="image">
-                            </a>
-                            <div class="date">
-                                <span>29 December 208</span>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <h3>
-                                <a href="news-details.html">
-                                    LOGXLABS assesses your ecological footprint
-                                </a>
-                            </h3>
-                            <a href="news-details.html" class="blog-btn">Read More +</a>
-                        </div>
+                <div class="col-lg-8 col-md-12">
+
+
+                    <div class="projects-details-image">
+                        <img src="assets/img/technology/3.png" alt="image" class="w-100">
+                    </div>
+
+                    <div class="projects-details-desc">
+                        <h3>Ecological Technology</h3>
+                        <p>Ecological technology, also known as eco-technology or green technology, refers to the
+                            application of scientific and engineering principles to develop solutions that minimize
+                            negative environmental impacts and promote sustainability. It involves the use of innovative
+                            techniques, materials, and systems to address environmental challenges while supporting
+                            economic and social well-being.</p>
+                        <p>Ecological technology aims to reduce resource consumption, minimize pollution and waste
+                            generation, and mitigate the ecological footprint of human activities. It encompasses
+                            various fields such as renewable energy, waste management, water conservation, sustainable
+                            agriculture, green building, and transportation.</p>
+                        <p>This technology emphasizes the development and implementation of cleaner, more efficient
+                            processes, products, and systems that contribute to environmental protection and
+                            conservation. It often involves the integration of advanced technologies, such as solar
+                            power, wind energy, biofuels, energy-efficient appliances, smart grids, and eco-friendly
+                            materials.</p>
+                        <p>By harnessing ecological technology, we can strive to achieve a more sustainable and balanced
+                            relationship with our natural environment. It plays a crucial role in mitigating climate
+                            change, preserving biodiversity, conserving natural resources, and creating a healthier and
+                            more resilient planet for future generations.
+                        </p>
+
                     </div>
                 </div>
 
+                <div class="col-lg-4 col-md-12">
+                    <aside class="widget-area" id="secondary">
+
+                        <section class="widget widget_categories">
+                            <h3 class="widget-title">Technology</h3>
+                            <ul>
+                                <li>
+                                    <a href="technology-details-1.html">The Algorithms</a>
+                                </li>
+                                <li>
+                                    <a href="technology-details-2.html">Computers</a>
+                                </li>
+                                <li>
+                                    <a href="technology-details-3.html">Ecological Technology</a>
+                                </li>
+
+                            </ul>
+                        </section>
+                    </aside>
+                </div>
             </div>
         </div>
     </section>
-    <!-- End Blog Area -->
+    <!-- End Projects Details Area -->
+
+
+
     <!-- Start Footer Area -->
     <div class="footer-area pt-100 pb-70">
         <div class="container">
@@ -254,10 +282,6 @@
                                 <i class="las la-angle-double-right"></i>
                                 <a href="technology.html">Technology</a>
                             </li>
-                            <li>
-                                <i class="las la-angle-double-right"></i>
-                                <a href="news.html">News</a>
-                            </li>
 
                             <li>
                                 <i class="las la-angle-double-right"></i>
@@ -311,6 +335,24 @@
         <i class="las la-long-arrow-alt-up"></i>
     </div>
     <!-- End Go Top Area -->
+
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'en',
+                includedLanguages: 'en,fr,es',
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                autoDisplay: false,
+                gaTrack: true,
+                gaId: 'YOUR_GA_TRACKING_ID',
+                showIcon: true, // Show country icons
+                css: '.goog-custom-class' // Add a custom CSS class
+            }, 'google_translate_element');
+        }
+    </script>
+
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+    </script>
 
     <!-- Jquery Slim JS -->
     <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
