--- a/technology.html
+++ b/technology.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <!-- Required meta tags -->
@@ -47,14 +47,18 @@
                             <a href="mailto:contact@logxlabs.com"><span class="__cf_email__"
                                     data-cfemail="3d55585151527d54535b52135e5250">contact@logxlabs.com</span></a>
                         </li>
+                        <li>
+                            <i class="las la-phone-volume"></i>
+                            <a href="tel:33 0616 078 690">33 (0)616 078 690</a>
+                        </li>
                     </ul>
                 </div>
 
                 <div class="col-lg-6">
                     <ul class="top-right">
+
                         <li>
-                            <i class="las la-phone-volume"></i>
-                            <a href="tel:33 0616 078 690">33 (0)616 078 690</a>
+                            <div id="google_translate_element"></div>
                         </li>
                     </ul>
                 </div>
@@ -107,11 +111,6 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="news.html" class="nav-link">
-                                    News
-                                </a>
-                            </li>
-                            <li class="nav-item">
                                 <a href="contact.html" class="nav-link">
                                     Contact
                                 </a>
@@ -155,44 +154,66 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="projects-item two">
                         <div class="image">
-                            <a href="technology-details.html">
+                            <a href="technology-details-1.html">
                                 <img src="assets/img/technology/1.png" alt="image">
                             </a>
 
                             <div class="icon">
-                                <a href="technology-details.html">
+                                <a href="technology-details-1.html">
                                     <i class="las la-arrow-right"></i>
                                 </a>
                             </div>
                         </div>
                         <div class="content">
                             <h3>
-                                <a href="technology-details.html">The algorithms</a>
+                                <a href="technology-details-1.html">The algorithms</a>
                             </h3>
                             <span>Optimisation can be defined as the processes used to find the best solutions to a
-                                problem that has a lot of possible solutions.</span>
+                                problem that has a lot of possible solutions. To cope with the combinatorial</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="projects-item two">
                         <div class="image">
-                            <a href="technology-details.html">
+                            <a href="technology-details-2.html">
                                 <img src="assets/img/technology/2.png" alt="image">
                             </a>
 
                             <div class="icon">
-                                <a href="technology-details.html">
+                                <a href="technology-details-2.html">
                                     <i class="las la-arrow-right"></i>
                                 </a>
                             </div>
                         </div>
                         <div class="content">
                             <h3>
-                                <a href="technology-details.html">Computers</a>
+                                <a href="technology-details-2.html">Computers</a>
                             </h3>
                             <span>Although our algorithms control the combinatorial explosion of solutions, it is
                                 necessary to use the power of server clusters to produce results as</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="projects-item two">
+                        <div class="image">
+                            <a href="technology-details-3.html">
+                                <img src="assets/img/technology/3.png" alt="image">
+                            </a>
+
+                            <div class="icon">
+                                <a href="technology-details-3.html">
+                                    <i class="las la-arrow-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <h3>
+                                <a href="technology-details-3.html">Ecological Technology</a>
+                            </h3>
+                            <span>Ecological technology, also known as eco-technology or green technology, refers to the
+                                application of scientific and engineering principles to develop solutions </span>
                         </div>
                     </div>
                 </div>
@@ -201,34 +222,6 @@
     </section>
     <!-- End Projects Area -->
 
-    <!-- Start Newsletter Area -->
-    <div class="newsletter-area pb-100">
-        <div class="container">
-            <div class="newsletter-inner">
-                <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <div class="newsletter-content">
-                            <h2>Subscribe To Our Newsletter</h2>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <form class="newsletter-form">
-                            <input type="email" class="input-newsletter" placeholder="Your Email" name="EMAIL" required
-                                autocomplete="off">
-
-                            <button type="submit">
-                                Subscribe Now
-                            </button>
-
-                            <div id="validator-newsletter" class="form-result"></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Newsletter Area -->
 
     <!-- Start Footer Area -->
     <div class="footer-area pt-100 pb-70">
@@ -307,10 +300,6 @@
                                 <i class="las la-angle-double-right"></i>
                                 <a href="technology.html">Technology</a>
                             </li>
-                            <li>
-                                <i class="las la-angle-double-right"></i>
-                                <a href="news.html">News</a>
-                            </li>
 
                             <li>
                                 <i class="las la-angle-double-right"></i>
@@ -364,6 +353,24 @@
         <i class="las la-long-arrow-alt-up"></i>
     </div>
     <!-- End Go Top Area -->
+
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'en',
+                includedLanguages: 'en,fr,es',
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                autoDisplay: false,
+                gaTrack: true,
+                gaId: 'YOUR_GA_TRACKING_ID',
+                showIcon: true, // Show country icons
+                css: '.goog-custom-class' // Add a custom CSS class
+            }, 'google_translate_element');
+        }
+    </script>
+
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+    </script>
 
     <!-- Jquery Slim JS -->
     <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
